--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,6 +8,10 @@ spring:
     driver-class-name: org.h2.Driver
   jpa:
     show-sql: true
+  security:
+    user:
+      name: user
+      password: 1234
 api:
   endpoint:
     base-url: /api/v1
