--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,17 +1,9 @@
-spring.application.name:
-  hogwarts-artifacts-online
 spring:
-  datasource:
-    url: jdbc:h2:mem:hogwarts
-    username: sa
-    password:
-    driver-class-name: org.h2.Driver
-  jpa:
-    show-sql: true
-  security:
-    user:
-      name: user
-      password: 1234
+  profiles:
+    active: dev
+  web:
+    resources:
+      add-mappings: false
 api:
   endpoint:
     base-url: /api/v1
