Add observability stack (Prometheus, Grafana, and Zipkin) to the project.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -38,6 +38,9 @@ management:
   observations:
     annotations:
       enabled: true
+  tracing:
+    sampling:
+      probability: 0.1
 info:
   app:
     name: hogwarts-artifacts-online
