Implement upload image to Azure Blob Storage.

--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,10 @@
 			<artifactId>spring-cloud-azure-starter-keyvault</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>com.azure.spring</groupId>
+			<artifactId>spring-cloud-azure-starter-storage-blob</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>io.micrometer</groupId>
 			<artifactId>micrometer-registry-prometheus</artifactId>
 			<scope>runtime</scope>
