--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -1,4 +1,17 @@
 spring:
+  cloud:
+    azure:
+      keyvault:
+        secret:
+          property-sources[0]:
+            endpoint: ${AZURE_KEY_VAULT_ENDPOINT} # environment variable
+      storage:
+        blob:
+          account-name: ${AZURE_STORAGE_ACCOUNT_NAME} # environment variable
+  servlet:
+    multipart:
+      max-file-size: 2MB
+      max-request-size: 20MB
   datasource:
     url: ${datasource-url}
     username: ${datasource-username}
