--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -14,6 +14,10 @@ spring:
     multipart:
       max-file-size: 2MB
       max-request-size: 20MB
+  data:
+    redis:
+      host: localhost
+      port: 6379
 ai:
   gemini:
     endpoint: ${AI_GENINI_ENDPOINT:https://generativelanguage.googleapis.com/v1beta/openai/chat/completions} # environment variable with a default value.
